// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with a value 1`] = `
<input
  aria-label="ControlledInput"
  className="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  disabled={false}
  id="ControlledInput"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  type="checkbox"
  value="someValue"
/>
`;

exports[`renders the component with all required props 1`] = `
<input
  aria-label="ControlledInput"
  className="ControlledInput"
  data-test-id="cf-ui-controlled-input"
  disabled={false}
  id="ControlledInput"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  type="checkbox"
/>
`;

exports[`renders the component with an additional class name 1`] = `
<input
  aria-label="ControlledInput"
  className="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  disabled={false}
  id="ControlledInput"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  type="checkbox"
/>
`;

exports[`renders the component with as checked 1`] = `
<input
  aria-label="ControlledInput"
  checked={true}
  className="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  disabled={false}
  id="ControlledInput"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  type="checkbox"
/>
`;

exports[`renders the component with isDisabled prop 1`] = `
<input
  aria-label="ControlledInput"
  className="ControlledInput my-extra-class ControlledInput--is-disabled"
  data-test-id="cf-ui-controlled-input"
  disabled={true}
  id="ControlledInput"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  required={false}
  type="checkbox"
/>
`;

exports[`renders the component with required prop 1`] = `
<input
  aria-label="ControlledInput"
  className="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  disabled={false}
  id="ControlledInput"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  required={true}
  type="checkbox"
/>
`;
